--- a/AndroidProject/app/src/main/AndroidManifest.xml
+++ b/AndroidProject/app/src/main/AndroidManifest.xml
@@ -15,8 +15,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Match.MatchView">
-        </activity>
+        <activity android:name=".Match.MatchView"></activity>
+        <activity android:name=".Team.TeamActivity"></activity>
     </application>
 
 </manifest>
