affichage des equipe, pb affichage classement.bug a regler

--- a/AndroidProject/app/src/main/AndroidManifest.xml
+++ b/AndroidProject/app/src/main/AndroidManifest.xml
@@ -16,8 +16,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".Match.MatchView" />
-        <activity android:name=".Team.TeamActivity" />
-        <activity android:name=".Team.TeamsListActivity"></activity>
+        <activity android:name=".Team.TeamsListActivity" />
+        <activity android:name=".Team.TeamActivity"></activity>
     </application>
 
 </manifest>
