add dropdown menu to choose team from database when you add match

--- a/AndroidProject/app/src/main/AndroidManifest.xml
+++ b/AndroidProject/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".Match.MatchView" />
-        <activity android:name=".Team.TeamsListActivity" />
+        <activity android:name=".Team.TeamsListActivity" ></activity>
         <activity android:name=".Team.TeamActivity"></activity>
     </application>
 
