added behaviour when click on team > redirect to teamview

--- a/AndroidProject/app/src/main/AndroidManifest.xml
+++ b/AndroidProject/app/src/main/AndroidManifest.xml
@@ -28,6 +28,7 @@
         <activity android:name=".Match.MatchView" />
         <activity android:name=".Team.TeamsListActivity" />
         <activity android:name=".Team.TeamActivity" />
+        <activity android:name=".Team.teamView"></activity>
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
              (See the file "res/values/google_maps_api.xml").
