--- a/AndroidProject/app/src/main/AndroidManifest.xml
+++ b/AndroidProject/app/src/main/AndroidManifest.xml
@@ -25,10 +25,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Match.MatchView" />
+        <activity android:name=".Match.MatchView" android:label="@string/matchView"/>
         <activity android:name=".Team.TeamsListActivity" />
         <activity android:name=".Team.TeamActivity" />
-        <activity android:name=".Team.teamView"></activity>
+        <activity android:name=".Team.teamView" android:label="@string/teamView"></activity>
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
              (See the file "res/values/google_maps_api.xml").
