save before hard try - warning not working version: cant add more player

--- a/AndroidProject/app/src/main/AndroidManifest.xml
+++ b/AndroidProject/app/src/main/AndroidManifest.xml
@@ -29,6 +29,7 @@
         <activity android:name=".Team.TeamsListActivity" />
         <activity android:name=".Team.TeamActivity" />
         <activity android:name=".Team.teamView" android:label="@string/teamView"></activity>
+        <activity android:name=".Player.PlayerActivity"></activity>
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
              (See the file "res/values/google_maps_api.xml").
