--- a/AndroidProject/app/src/main/AndroidManifest.xml
+++ b/AndroidProject/app/src/main/AndroidManifest.xml
@@ -30,6 +30,7 @@
         <activity android:name=".Team.TeamActivity" />
         <activity android:name=".Team.teamView" android:label="@string/teamView"></activity>
         <activity android:name=".Player.PlayerActivity"></activity>
+        <activity android:name=".Score.ScoreView"></activity>
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
              (See the file "res/values/google_maps_api.xml").
