--- a/AndroidProject/app/src/main/AndroidManifest.xml
+++ b/AndroidProject/app/src/main/AndroidManifest.xml
@@ -31,6 +31,7 @@
         <activity android:name=".Team.teamView" android:label="@string/teamView"></activity>
         <activity android:name=".Player.PlayerActivity"></activity>
         <activity android:name=".Score.ScoreView"></activity>
+        <activity android:name=".Score.ScoreActivity"></activity>
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
              (See the file "res/values/google_maps_api.xml").
