--- a/AndroidProject/app/src/main/AndroidManifest.xml
+++ b/AndroidProject/app/src/main/AndroidManifest.xml
@@ -30,7 +30,7 @@
         <activity android:name=".Team.TeamActivity" />
         <activity android:name=".Team.teamView" android:label="@string/teamView"></activity>
         <activity android:name=".Player.PlayerActivity"></activity>
-        <activity android:name=".Score.ScoreView"></activity>
+        <activity android:name=".Score.ScoreView" android:label="@string/scoreView"></activity>
         <activity android:name=".Score.ScoreActivity"></activity>
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
