--- a/AndroidProject/app/src/main/AndroidManifest.xml
+++ b/AndroidProject/app/src/main/AndroidManifest.xml
@@ -10,6 +10,10 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
 
+    <uses-feature
+        android:name="android.hardware.camera"
+        android:required="true" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -25,13 +29,19 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Match.MatchView" android:label="@string/matchView"/>
+        <activity
+            android:name=".Match.MatchView"
+            android:label="@string/matchView" />
         <activity android:name=".Team.TeamsListActivity" />
         <activity android:name=".Team.TeamActivity" />
-        <activity android:name=".Team.teamView" android:label="@string/teamView"></activity>
-        <activity android:name=".Player.PlayerActivity"></activity>
-        <activity android:name=".Score.ScoreView" android:label="@string/scoreView"></activity>
-        <activity android:name=".Score.ScoreActivity"></activity>
+        <activity
+            android:name=".Team.teamView"
+            android:label="@string/teamView" />
+        <activity android:name=".Player.PlayerActivity" />
+        <activity
+            android:name=".Score.ScoreView"
+            android:label="@string/scoreView" />
+        <activity android:name=".Score.ScoreActivity" />
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
              (See the file "res/values/google_maps_api.xml").
@@ -49,7 +59,12 @@
             android:label="@string/title_activity_maps" />
         <activity
             android:name=".MapsActivityforMain"
-            android:label="@string/title_activity_maps_activityfor_main"></activity>
+            android:label="@string/title_activity_maps_activityfor_main" />
+
+        <activity
+            android:name=".Camera.CameraActivity"
+            android:label="@string/title_activity_camera"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
 </manifest>
