--- a/AndroidProject/app/src/main/AndroidManifest.xml
+++ b/AndroidProject/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
     -->
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
-
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"></uses-permission>
     <uses-feature
         android:name="android.hardware.camera"
         android:required="true" />
@@ -65,6 +65,8 @@
             android:name=".Camera.CameraActivity"
             android:label="@string/title_activity_camera"
             android:theme="@style/AppTheme.NoActionBar"></activity>
+
+
     </application>
 
 </manifest>
